--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "npm": "^6.14.8"
+  },
+  "devDependencies": {
+    "concurrently": "^5.1.0",
+    "nodemon": "^2.0.2"
   }
 }
