--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Ecommerce App",
   "short_name": "Ecommerce",
-  "theme_color": "#3a1a86",
-  "background_color": "#1a4f79",
+  "theme_color": "#317EFB",
+  "background_color": "#FFFFFF",
   "display": "standalone",
   "orientation": "portrait",
   "start_url": ".",
@@ -10,22 +10,26 @@
     {
       "src": "/icons/app-icon-96-96.png",
       "sizes": "96x96",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/icons/app-icon-144-144.png",
       "sizes": "144x144",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/icons/app-icon-256-256.png",
       "sizes": "256x256",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/icons/app-icon-512-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
