--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,12 @@
 /client/build
 
 # misc
-
+/.env
+/client/.DS_Store
+/client/.env.local
+/client/.env.development.local
+/client/.env.test.local
+/client/.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
