--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
 # dependencies
 /node_modules
-/client/node_modules
-/client/.pnp
-/client/.pnp.js
+/frontend/node_modules
+/frontend/.pnp
+/frontend/.pnp.js
 
 # testing
-/client/coverage
+/frontend/coverage
 
 # production
-/client/build
+/frontend/build
 
 # misc
 /.env
-/client/.DS_Store
-/client/.env.local
-/client/.env.development.local
-/client/.env.test.local
-/client/.env.production.local
+/frontend/.DS_Store
+/frontend/.env.local
+/frontend/.env.development.local
+/frontend/.env.test.local
+/frontend/.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
