--- a/server/config/config.env
+++ b/server/config/config.env
@@ -1,1 +1,5 @@
-FRONTEND_URL = "http://localhost:8009"
+DATABASE=mongodb+srv://Bekzod:6862442@ecommerce.u0lgm.mongodb.net/fullapp?retryWrites=true&w=majority
+BRAINTREE_MERCHANT_ID=n74dc2kw9g3ws389
+BRAINTREE_PUBLIC_KEY=bgytmgzhz5f6t2tg
+BRAINTREE_PRIVATE_KEY=e6f226166da99d874f00008f0bba14fea
+NODE_ENV = "production"
