--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,11 @@
     "bootstrap": "^4.5.2",
     "braintree-web-drop-in-react": "^1.2.1",
     "moment": "^2.29.0",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "swiper": "^8.0.7",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
     "workbox-cacheable-response": "^5.1.4",
